# gpu-raytracer

./: .gitignore  CMakeLists.txt  README.md
lib/: credits.txt
src/: BVH.cpp  BVH.h  CMakeLists.txt  ComputeShader.cpp  ComputeShader.h  FileHandler.h  InputHandler.cpp  InputHandler.h  Object.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  main.cpp  opengl-boilerplate.sln  opengl-raytracer.sln
src/opengl-boilerplate/: Camera.h  FileHandler.h  InputHandler.h  Renderer.h  opengl-boilerplate.vcxproj  opengl-boilerplate.vcxproj.filters  packages.config
src/opengl-boilerplate/shaders/: screentexture.frag
src/opengl-raytracer/: Camera.h  ComputeShader.cpp  InputHandler.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  linesofcode.sh  main.cpp  opengl-raytracer.vcxproj  opengl-raytracer.vcxproj.filters
src/opengl-raytracer/shaders/: harald.comp  pathtracer.comp  screentexture.frag  staging.comp
src/shaders/: pathtracer.comp
