cmake_minimum_required(VERSION 3.13)
project(src)

set(CMAKE_CXX_STANDARD 14)

include_directories(GeoSim)
include_directories(packages/glfw.3.2.1.5)
include_directories(packages/glfw.3.2.1.5/build)
include_directories(packages/glfw.3.2.1.5/build/native)
include_directories(packages/glfw.3.2.1.5/build/native/include)
include_directories(packages/glfw.3.2.1.5/build/native/include/GLFW)
include_directories(packages/glm.0.9.9.300/build/native/include)
include_directories(packages/glm.0.9.9.300/build/native/include/glm)
include_directories(packages/glm.0.9.9.300/build/native/include/glm/detail)
include_directories(packages/glm.0.9.9.300/build/native/include/glm/ext)
include_directories(packages/glm.0.9.9.300/build/native/include/glm/gtc)
include_directories(packages/glm.0.9.9.300/build/native/include/glm/gtx)
include_directories(packages/glm.0.9.9.300/build/native/include/glm/simd)
include_directories(GeoSim/lib/sdl2/lib)
include_directories(GeoSim/lib/sdl2)
include_directories(GeoSim/lib/stb_image_write)
include_directories(GeoSim/lib/stb_image)
include_directories(GeoSim/lib/sdl2/include)
include_directories(GeoSim/lib/sdl2/include/GL)

add_executable(src
        GeoSim/shaders/basic.frag
        GeoSim/shaders/basic.vert
        GeoSim/Camera.h
        GeoSim/DistanceField.h
        GeoSim/Erosion.h
        GeoSim/FileHandler.h
        GeoSim/ImageHelper.h
        GeoSim/include.cpp
        GeoSim/InputHandler.cpp
        GeoSim/InputHandler.h
        GeoSim/main.cpp
        GeoSim/PixelData.h
        GeoSim/Planet.h
        GeoSim/Renderer.cpp
        GeoSim/Renderer.h
        GeoSim/SDL2.dll
        GeoSim/Shader.cpp
        GeoSim/Shader.h
        GeoSim/Simulation.h
        GeoSim/TextureManager.cpp
        GeoSim/TextureManager.h
        GeoSim/lib/sdl2/include/begin_code.h
        GeoSim/lib/sdl2/include/close_code.h
        GeoSim/lib/sdl2/include/SDL.h
        GeoSim/lib/sdl2/include/SDL_assert.h
        GeoSim/lib/sdl2/include/SDL_atomic.h
        GeoSim/lib/sdl2/include/SDL_audio.h
        GeoSim/lib/sdl2/include/SDL_audio.h
        GeoSim/lib/sdl2/include/SDL_bits.h
        GeoSim/lib/sdl2/include/SDL_blendmode.h
        GeoSim/lib/sdl2/include/SDL_clipboard.h
        GeoSim/lib/sdl2/include/SDL_config.h
        GeoSim/lib/sdl2/include/SDL_config_windows.h
        GeoSim/lib/sdl2/include/SDL_error.h
        GeoSim/lib/sdl2/include/SDL_events.h
        GeoSim/lib/sdl2/include/SDL_filesystem.h
        GeoSim/lib/sdl2/include/SDL_keyboard.h
        GeoSim/lib/sdl2/include/SDL_keycode.h
        GeoSim/lib/sdl2/include/SDL_log.h
        GeoSim/lib/sdl2/include/SDL_main.h
        GeoSim/lib/sdl2/include/SDL_mouse.h
        GeoSim/lib/sdl2/include/SDL_name.h
        GeoSim/lib/sdl2/include/SDL_opengl.h
        GeoSim/lib/sdl2/include/SDL_opengl_glext.h
        packages/glfw.3.2.1.5/build/native/include/GLFW/glfw3.h
        packages/glfw.3.2.1.5/build/native/include/GLFW/glfw3native.h
        packages/glm.0.9.9.300/build/native/include/glm/detail/_features.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/_fixes.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/_noise.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/_swizzle.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/_swizzle_func.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/_vectorize.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/compute_common.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/compute_vector_relational.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_common.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_common_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_exponential.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_exponential_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_geometric.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_geometric_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_integer.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_integer_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_matrix.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_matrix_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_packing.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_packing_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_trigonometric.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_trigonometric_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_vector_relational.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/func_vector_relational_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/glm.cpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/qualifier.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/setup.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_float.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_half.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_half.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat2x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat2x2.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat2x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat2x3.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat2x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat2x4.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat3x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat3x2.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat3x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat3x3.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat3x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat3x4.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat4x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat4x2.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat4x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat4x3.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat4x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat4x4.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_mat4x4_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_quat.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_quat.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_quat_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec1.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec1.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec2.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec3.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec4.inl
        packages/glm.0.9.9.300/build/native/include/glm/detail/type_vec4_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_clip_space.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_clip_space.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double2x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double2x2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double2x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double2x3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double2x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double2x4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double3x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double3x2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double3x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double3x3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double3x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double3x4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double4x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double4x2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double4x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double4x3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double4x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_double4x4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float2x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float2x2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float2x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float2x3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float2x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float2x4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float3x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float3x2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float3x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float3x3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float3x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float3x4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float4x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float4x2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float4x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float4x3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float4x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_float4x4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_projection.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_projection.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_relational.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_relational.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_transform.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/matrix_transform.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_common.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_common.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_common_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_double.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_double_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_exponential.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_exponential.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_float.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_float_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_geometric.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_geometric.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_relational.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_relational.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_transform.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_transform.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_trigonometric.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/quaternion_trigonometric.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_common.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_common.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_constants.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_constants.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_int_sized.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_relational.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_relational.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_uint_sized.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_ulp.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/scalar_ulp.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool1.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool1_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_bool4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_common.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_common.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double1.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double1_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_double4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float1.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float1_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_float4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int1.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int1_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_int4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_relational.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_relational.inl
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint1.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint1_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint2_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint3_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_uint4_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_ulp.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext/vector_ulp.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/bitfield.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/bitfield.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/color_space.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/color_space.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/constants.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/constants.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/epsilon.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/epsilon.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/integer.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/integer.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/matrix_access.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/matrix_access.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/matrix_integer.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/matrix_inverse.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/matrix_inverse.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/matrix_transform.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/matrix_transform.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/noise.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/noise.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/packing.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/packing.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/quaternion.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/quaternion.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/quaternion_simd.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/random.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/random.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/reciprocal.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/reciprocal.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/round.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/round.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/type_aligned.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/type_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/type_precision.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/type_ptr.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/type_ptr.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/ulp.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtc/ulp.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtc/vec1.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/associated_min_max.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/associated_min_max.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/bit.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/bit.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/closest_point.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/closest_point.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/color_encoding.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/color_encoding.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/color_space.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/color_space.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/color_space_YCoCg.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/color_space_YCoCg.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/common.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/common.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/compatibility.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/compatibility.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/component_wise.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/component_wise.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/dual_quaternion.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/dual_quaternion.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/easing.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/easing.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/euler_angles.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/euler_angles.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/extend.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/extend.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/extended_min_max.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/extended_min_max.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/exterior_product.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/exterior_product.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/fast_exponential.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/fast_exponential.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/fast_square_root.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/fast_square_root.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/fast_trigonometry.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/fast_trigonometry.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/float_notmalize.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/functions.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/functions.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/gradient_paint.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/gradient_paint.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/handed_coordinate_space.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/handed_coordinate_space.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/hash.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/hash.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/integer.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/integer.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/intersect.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/intersect.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/io.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/io.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/log_base.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/log_base.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_cross_product.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_cross_product.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_decompose.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_decompose.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_factorisation.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_factorisation.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_interpolation.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_interpolation.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_major_storage.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_major_storage.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_operation.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_operation.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_query.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_query.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_transform_2d.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/matrix_transform_2d.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/mixed_product.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/mixed_product.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/norm.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/norm.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/normal.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/normal.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/normalize_dot.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/normalize_dot.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/number_precision.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/number_precision.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/optimum_pow.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/optimum_pow.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/orthonormalize.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/orthonormalize.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/perpendicular.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/perpendicular.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/polar_coordinates.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/polar_coordinates.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/projection.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/projection.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/quaternion.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/quaternion.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/range.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/raw_data.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/raw_data.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/rotate_normalized_axis.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/rotate_normalized_axis.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/rotate_vector.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/rotate_vector.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/scalar_multiplication.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/scalar_relational.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/scalar_relational.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/spline.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/spline.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/std_based_type.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/std_based_type.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/string_cast.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/string_cast.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/texture.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/texture.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/transform.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/transform.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/transform2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/transform2.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/type_aligned.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/type_aligned.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/type_trait.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/type_trait.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/vec_swizzle.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/vector_angle.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/vector_angle.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/vector_query.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/vector_query.inl
        packages/glm.0.9.9.300/build/native/include/glm/gtx/wrap.hpp
        packages/glm.0.9.9.300/build/native/include/glm/gtx/wrap.inl
        packages/glm.0.9.9.300/build/native/include/glm/simd/common.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/exponential.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/geometric.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/integer.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/matrix.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/packing.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/platform.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/trigonometric.h
        packages/glm.0.9.9.300/build/native/include/glm/simd/vector_relational.h
        packages/glm.0.9.9.300/build/native/include/glm/common.hpp
        packages/glm.0.9.9.300/build/native/include/glm/exponential.hpp
        packages/glm.0.9.9.300/build/native/include/glm/ext.hpp
        packages/glm.0.9.9.300/build/native/include/glm/fwd.hpp
        packages/glm.0.9.9.300/build/native/include/glm/geometric.hpp
        packages/glm.0.9.9.300/build/native/include/glm/glm.hpp
        packages/glm.0.9.9.300/build/native/include/glm/integer.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat2x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat2x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat2x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat3x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat3x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat3x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat4x2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat4x3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/mat4x4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/matrix.hpp
        packages/glm.0.9.9.300/build/native/include/glm/packing.hpp
        packages/glm.0.9.9.300/build/native/include/glm/trigonometric.hpp
        packages/glm.0.9.9.300/build/native/include/glm/vec2.hpp
        packages/glm.0.9.9.300/build/native/include/glm/vec3.hpp
        packages/glm.0.9.9.300/build/native/include/glm/vec4.hpp
        packages/glm.0.9.9.300/build/native/include/glm/vector_relational.hpp)
